# xremap_gui

./: .gitignore  README.md  pyproject.toml
src/xremap_gui/: __init__.py  remap.py
