[project]
name = "xremap_gui"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
description = "A GUI for configuring xremap key remappings on Linux"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = "MIT"
dependencies = ["PyYAML"]

[project.urls]
Homepage = "https://github.com/your-username/xremap_gui"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
